tests/typechecker/should_pass/module_instance_map.csp
module M(X)
exports
  z = mapFromList(X)
endmodule

instance M1 = M(<(0,1)>)

test1 = M1::z == mapFromList(<(0,1)>)
