tests/typechecker/should_fail/simple_modules_4.csp
module X

exports
    module Y
    exports
        channel Y : Int
        g = Y.1
    endmodule


    Y::f.0 = Y::g
endmodule
